# mincut

./: CMakeLists.txt  CMakeLists.txt.user.9e918a7  graph.cpp  graph.h  graph_cut.cxx  main.cpp
data/: GradientImage2d_op.mhd  generate_lookup.pl  generate_lookup.pl~
old/: GradientImage2d_op.raw  driver.cu  driver.cuh  driver.h  graph_cut.cxx  parallelcmakelist  parallelcmakelist~
src/mincut/: CMakeLists.txt  graph.cpp  graph.h
src/parallel/: #driver.#  CMakeLists.txt  CMakeLists.txt~  driver.cu  driver.cu~  driver.h
src/parallel-build/: CMakeCache.txt  GPUMINCUT.cbp  Makefile  cmake_install.cmake
src/parallel-build/include/: driver.h
test/: CMakeLists.txt  main.cpp
test/Meta_IO/: Makefile  cmake_install.cmake
test/Meta_IO/itkzlib/: Makefile  cmake_install.cmake
test/Meta_IO/src/: Makefile  cmake_install.cmake
